#1 Removed fileType from /download/<reqId>/files query params and added compressedFileType in DownloadRequest instead
